# Sauce-sdk

./: README.md
sp/src/: CMakeLists.txt
sp/src/cmake/sources/: captioncompiler.cmake  client.cmake  glview.cmake  height2normal.cmake  motionmapper.cmake  qc_eyes.cmake  server.cmake  tier1.cmake  vbsp.cmake  vice.cmake  vrad_dll.cmake  vrad_launcher.cmake  vtf2tga.cmake  vvis_dll.cmake  vvis_launcher.cmake
sp/src/cmake/sources/game/: server.cmake
sp/src/cmake/sources/utils/: glview.cmake  height2normal.cmake  phonemeextractor.cmake  phonemeextractor_ims.cmake  qc_eyes.cmake  tgadiff.cmake  utils_include.cmake  vbsp.cmake  vtfdiff.cmake  vvis.cmake  vvis_dll.cmake
sp/src/common/: compiledcaptionswap.cpp
sp/src/common/replay/: shared_defs.h
sp/src/fgdlib/: fgdlib.cmake
sp/src/game/client/: c_baseflex.cpp  c_impact_effects.cpp  c_pixel_visibility.cpp  c_slideshow_display.cpp  c_vguiscreen.cpp  cdll_client_int.cpp  cdll_util.cpp  client.cmake  clientmode_shared.cpp  clientshadowmgr.cpp  in_mouse.cpp  particlemgr.cpp  prediction.cpp  vgui_fpspanel.cpp  viewrender.cpp
sp/src/game/client/episodic/: c_vort_charge_token.cpp  episodic_screenspaceeffects.cpp
sp/src/game/client/replay/: replay_screenshot.cpp
sp/src/game/server/: server.cmake
sp/src/game/shared/: basecombatweapon_shared.cpp  shared.cmake  teamplayroundbased_gamerules.cpp  util_shared.cpp  weapon_parse.cpp
sp/src/materialsystem/: materialsystem.cmake
sp/src/mathlib/: mathlib.cmake
sp/src/raytrace/: raytrace.cmake
sp/src/vgui2/: vgui2.cmake
